--- a/index.html
+++ b/index.html
@@ -22,14 +22,34 @@
                 </li>
                 <li><img src="assets/logo.svg" alt=""></li>
                 <li>
-                    <a>gallery</a>
+                    <a href="gallery.html">gallery</a>
                 </li>
                 <li>
-                    <a>contatti</a>
+                    <a href="contacts.html">contatti</a>
                 </li>
             </ul>
+            <div class="mobile">
+                <a id="menu"><img src="assets/menu.svg" alt=""></a>
+                <span><img src="assets/logo.svg" alt="logo"></span>
+                <div class="nav">
+                    <ul>
+                        <li>
+                            <a href="index.html">home</a>
+                        </li>
+                        <li>
+                            <a href="rooms.html">camere</a>
+                        </li>
+                        <li>
+                            <a href="gallery.html">gallery</a>
+                        </li>
+                        <li>
+                            <a href="contacts.html">contatti</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-        <video crossorigin="anonymous" poster="assets/hero_img.jpg" autoplay loop>
+        <video crossorigin="anonymous" poster="assets/hero_img.jpg" autoplay loop muted>
             <source src="assets/hero.mp4" type="video/mp4">
         </video>
         <div class="content">
@@ -40,7 +60,7 @@
         <img class="squares" src="assets/rombs.svg" alt="">
     </header>
     <main class="container">
-        <p class="title mt-72 w-6">
+        <p class="mainTitle">
             <strong>Valorizziamo</strong> i tuoi momenti di svago con tutta l’attenzione
             che questi preziosi momenti <strong>meritano</strong>
         </p>
@@ -179,7 +199,7 @@
         </header>
         <div class="row">
             <figure class="col s12 m8">
-                <img src="assets/map.svg" class="res" alt="Capri map">
+                <img src="assets/map.svg" class="res pr-56" alt="Capri map">
             </figure>
             <figure class="col s12 m4">
                 <img src="assets/legend.svg" class="res" alt="Capri map legend">
