--- a/rooms.html
+++ b/rooms.html
@@ -22,10 +22,10 @@
                 </li>
                 <li><img src="assets/logo.svg" alt=""></li>
                 <li>
-                    <a>gallery</a>
+                    <a href="gallery.html">gallery</a>
                 </li>
                 <li>
-                    <a>contatti</a>
+                    <a href="contacts.html">contatti</a>
                 </li>
             </ul>
         </nav>
@@ -40,87 +40,103 @@
     <main class="container">
         <article class="roomCard mt-88" itemscope itemtype="http://schema.org/HotelRoom http://schema.org/Product">
             <figure data-aos="fade-right">
-                <img src="assets/rooms.jpg" class="res" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-4.jpg" class="res slider1" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-5.jpg" class="res slider1" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-6.jpg" class="res slider1" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <span onclick="plusDivs(-1, 0)">&#10094;</span>
+                <span onclick="plusDivs(1, 0)">&#10095;</span>
             </figure>
             <div class="content" data-aos="fade-left">
                 <h3 itemprop="name">SUPERIOR VISTA<br> GIARDINO</h3>
-                    <p itemprop="description">E’ una camera matrimoniale finemente arredata, ristrutturata con un gusto
-                        minimal e moderno ma che
-                        nel contempo segue la tradizione locale caprese. La vista giardino è offerta dalla grande
-                        finestra
-                        che rende la camera luminosa ed energizzante.
-                        E’ dotata di tv satellitare LCD schermo grande piatto, minibar e possibilità di connessione
-                        internet
-                        WI-FI.</p>
-                    <span>
-                        <img src="assets/tv_icon.svg" alt="tv service">
-                        <img src="assets/wifi_icon.svg" alt="wi fi service">
-                        <img src="assets/tree_icon.svg" alt="tv service">
-                        <img src="assets/minibar_icon.svg" alt="tv service">
-                    </span>
-                    <button>Prenota</button>
+                <p itemprop="description">E’ una camera matrimoniale finemente arredata, ristrutturata con un gusto
+                    minimal e moderno ma che
+                    nel contempo segue la tradizione locale caprese. La vista giardino è offerta dalla grande
+                    finestra
+                    che rende la camera luminosa ed energizzante.
+                    E’ dotata di tv satellitare LCD schermo grande piatto, minibar e possibilità di connessione
+                    internet
+                    WI-FI.</p>
+                <span>
+                    <img src="assets/tv_icon.svg" alt="tv service">
+                    <img src="assets/wifi_icon.svg" alt="wi fi service">
+                    <img src="assets/tree_icon.svg" alt="tv service">
+                    <img src="assets/minibar_icon.svg" alt="tv service">
+                </span>
+                <button>Prenota</button>
             </div>
         </article>
         <article class="roomCard mt-72" itemscope itemtype="http://schema.org/HotelRoom http://schema.org/Product">
             <figure data-aos="fade-up">
-                <img src="assets/rooms.jpg" class="res" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-1.jpg" class="res slider2" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-2.jpg" class="res slider2" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-3.jpg" class="res slider2" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <span onclick="plusDivs(-1, 1)">&#10094;</span>
+                <span onclick="plusDivs(1, 1)">&#10095;</span>
             </figure>
             <div class="content" data-aos="fade-down">
                 <h3 itemprop="name">SUPERIOR VISTA<br> MARE</h3>
-                    <p itemprop="description">La camera è particolarmente luminosa, grazie all’ampia finestra che si
-                        affaccia sul mare del Golfo di Napoli. L’ambiente, armonioso e rilassante, è arredato con un
-                        gusto minimal e moderno ma che conserva allo stesso tempo lo stile caprese.
-                        E’ dotata di tv satellitare LCD schermo grande piatto, minibar e possibilità di connessione
-                        internet WI-FI.
-                    </p>
-                    <span>
-                        <img src="assets/tv_icon.svg" alt="tv service">
-                        <img src="assets/wifi_icon.svg" alt="wi fi service">
-                        <img src="assets/sea_icon.svg" alt="tv service">
-                        <img src="assets/minibar_icon.svg" alt="tv service">
-                    </span>
-                    <button>Prenota</button>
+                <p itemprop="description">La camera è particolarmente luminosa, grazie all’ampia finestra che si
+                    affaccia sul mare del Golfo di Napoli. L’ambiente, armonioso e rilassante, è arredato con un
+                    gusto minimal e moderno ma che conserva allo stesso tempo lo stile caprese.
+                    E’ dotata di tv satellitare LCD schermo grande piatto, minibar e possibilità di connessione
+                    internet WI-FI.
+                </p>
+                <span>
+                    <img src="assets/tv_icon.svg" alt="tv service">
+                    <img src="assets/wifi_icon.svg" alt="wi fi service">
+                    <img src="assets/sea_icon.svg" alt="tv service">
+                    <img src="assets/minibar_icon.svg" alt="tv service">
+                </span>
+                <button>Prenota</button>
             </div>
         </article>
         <article class="roomCard mt-72" itemscope itemtype="http://schema.org/HotelRoom http://schema.org/Product">
             <figure data-aos="fade-right">
-                <img src="assets/rooms.jpg" class="res" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-1.jpg" class="res slider3" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-2.jpg" class="res slider3" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-3.jpg" class="res slider3" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <span onclick="plusDivs(-1, 2)">&#10094;</span>
+                <span onclick="plusDivs(1, 2)">&#10095;</span>
             </figure>
             <div class="content" data-aos="fade-left">
                 <h3 itemprop="name">DELUXE CON BALCONE<br> VISTA MARE</h3>
-                    <p itemprop="description">Un elegante ambiente reso particolarmente rilassante dal balcone che
-                        affaccia su una spettacolare vista mare.
-                        L’ambiente è moderno e caratterizzato dal pavimento in maiolica ottocentesca.
-                        Arredata in stile caprese è dotata di bagno personale e corredata da tv satellitare LCD schermo
-                        grande piatto, minibar e possibilità di connessione internet WI-FI.
-                    </p>
-                    <span>
-                        <img src="assets/tv_icon.svg" alt="tv service">
-                        <img src="assets/wifi_icon.svg" alt="wi fi service">
-                        <img src="assets/sea_icon.svg" alt="tv service">                        
-                        <img src="assets/minibar_icon.svg" alt="tv service">
-                    </span>
-                    <button>Prenota</button>
+                <p itemprop="description">Un elegante ambiente reso particolarmente rilassante dal balcone che
+                    affaccia su una spettacolare vista mare.
+                    L’ambiente è moderno e caratterizzato dal pavimento in maiolica ottocentesca.
+                    Arredata in stile caprese è dotata di bagno personale e corredata da tv satellitare LCD schermo
+                    grande piatto, minibar e possibilità di connessione internet WI-FI.
+                </p>
+                <span>
+                    <img src="assets/tv_icon.svg" alt="tv service">
+                    <img src="assets/wifi_icon.svg" alt="wi fi service">
+                    <img src="assets/sea_icon.svg" alt="tv service">
+                    <img src="assets/minibar_icon.svg" alt="tv service">
+                </span>
+                <button>Prenota</button>
             </div>
         </article>
         <article class="roomCard mt-72" itemscope itemtype="http://schema.org/HotelRoom http://schema.org/Product">
             <figure data-aos="fade-up">
-                <img src="assets/rooms.jpg" class="res" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-1.jpg" class="res slider4" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-2.jpg" class="res slider4" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <img src="assets/g-3.jpg" class="res slider4" itemprop="photo" alt="SUPERIOR VISTA GIARDINO">
+                <span onclick="plusDivs(-1, 3)">&#10094;</span>
+                <span onclick="plusDivs(1, 3)">&#10095;</span>
             </figure>
             <div class="content" data-aos="fade-down">
                 <h3 itemprop="name">SUITE<br> CON TERRAZZO</h3>
-                    <p itemprop="description">La camera è il posto perfetto per immergersi in un’oasi di pace e
-                        riservatezza a poche centinaia di metri dalla mondana Piazzetta e da Via Camerelle
-                        La suite può ospitare fino a 4 persone. E’ un angolo di paradiso dove è possibile consumare
-                        anche la prima colazione godendo della spettacolare vista sulla romantica Marina Piccola.
-                    </p>
-                    <span>
-                        <img src="assets/tv_icon.svg" alt="tv service">
-                        <img src="assets/wifi_icon.svg" alt="wi fi service">
-                        <img src="assets/sea_icon.svg" alt="tv service">                        
-                        <img src="assets/minibar_icon.svg" alt="tv service">
-                    </span>
-                    <button>Prenota</button>
+                <p itemprop="description">La camera è il posto perfetto per immergersi in un’oasi di pace e
+                    riservatezza a poche centinaia di metri dalla mondana Piazzetta e da Via Camerelle
+                    La suite può ospitare fino a 4 persone. E’ un angolo di paradiso dove è possibile consumare
+                    anche la prima colazione godendo della spettacolare vista sulla romantica Marina Piccola.
+                </p>
+                <span>
+                    <img src="assets/tv_icon.svg" alt="tv service">
+                    <img src="assets/wifi_icon.svg" alt="wi fi service">
+                    <img src="assets/sea_icon.svg" alt="tv service">
+                    <img src="assets/minibar_icon.svg" alt="tv service">
+                </span>
+                <button>Prenota</button>
             </div>
         </article>
     </main>
