--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
             <div class="mobile">
                 <a id="menu"><img src="assets/menu.svg" alt=""></a>
-                <span><img src="assets/logo.svg" alt="logo"></span>
+                <img src="assets/logo.svg" alt="logo">
                 <div class="nav">
                     <ul>
                         <li>
